Localize UI and documentation to English
Translated all user-facing text, comments, and documentation from Chinese to English across README, options, popup, and background scripts. Added a separate Chinese README for native users. Improves accessibility for English-speaking users and prepares the extension for broader distribution.

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Tab Deduplicator",
   "version": "1.0.0",
-  "description": "自動檢測重複的標籤頁，關閉舊的標籤頁並保留新開啟的標籤頁",
+  "description": "Automatically detect duplicate tabs, close old tabs and keep newly opened tabs",
   "author": "Your Name",
   "icons": {
     "48": "icons/icon-48.svg",
