Add build script and update manifest and popup UI
Added build.sh script to automate building the Firefox extension. Updated manifest.json with author, homepage, and browser-specific settings. Improved popup.js to use DOM methods instead of innerHTML for rendering duplicate tab information and no-duplicates message. Added built .xpi file.

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,17 @@
   "name": "Tab Deduplicator",
   "version": "1.0.0",
   "description": "Automatically detect duplicate tabs, close old tabs and keep newly opened tabs",
-  "author": "Your Name",
+  "author": "Bing-Huan Lin",
+  "homepage_url": "https://github.com/binghuan/Tab-Deduplicator",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "tab-deduplicator@binghuan.github.io",
+      "strict_min_version": "142.0",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
+    }
+  },
   "icons": {
     "48": "icons/icon-48.svg",
     "96": "icons/icon-96.svg"
